added texts route (#8)
* added texts route

* made code more consistent

* text route swagger docs

* reactivated affectedTextIds
