# app/api/texts/endpoints.js
@@ -1,10 +1,10 @@
 import blueprint from './blueprint';
 import { validator, queryBuilder } from '../helpers';
-import Control from './model';
+import Text from './model';
 import Prototype from '../prototypes/model';
 
 /**
- * List all controls
+ * List all texts
  */
 export const findAll = (req, res) => {
   Prototype.findOne({ _id: req.params.prototypeId })
@@ -12,18 +12,18 @@ export const findAll = (req, res) => {
       if (!prototype) {
         res.status(404).end(`Couldn't find prototype with id ${req.params.prototypeId}`);
       } else if (req.decodedToken._id !== String(prototype.userId)) {
-        res.status(403).end(`User with id '${req.decodedToken._id}' attempted to get controls for shapes with '${prototype.userId}' as owner`);
+        res.status(403).end(`User with id '${req.decodedToken._id}' attempted to get texts for page with '${prototype.userId}' as owner`);
       } else {
         validator(req.query, blueprint.get.all)
           .then((validated) => {
             const { where, limit, projection, populate } = queryBuilder(validated);
 
-            Control.find({ ...where, shapeId: req.params.shapeId })
+            Text.find({ ...where, pageId: req.params.pageId })
               .limit(limit)
               .populate(populate)
               .select(projection)
-              .then((controls) => {
-                res.status(200).json(controls);
+              .then((texts) => {
+                res.status(200).json(texts);
               })
               .catch(e => res.status(500).json(e));
           })
@@ -34,7 +34,7 @@ export const findAll = (req, res) => {
 };
 
 /**
- * List one control by id
+ * List one text by id
  */
 export const findOne = (req, res) => {
   Prototype.findOne({ _id: req.params.prototypeId })
@@ -42,20 +42,20 @@ export const findOne = (req, res) => {
       if (!prototype) {
         res.status(404).end(`Couldn't find prototype with id ${req.params.prototypeId}`);
       } else if (req.decodedToken._id !== String(prototype.userId)) {
-        res.status(403).end(`User with id '${req.decodedToken._id}' attempted to get control for shape with '${prototype.userId}' as owner`);
+        res.status(403).end(`User with id '${req.decodedToken._id}' attempted to get text for page with '${prototype.userId}' as owner`);
       } else {
         validator(req.query, blueprint.get.one)
           .then((validated) => {
             const { projection, populate } = queryBuilder(validated);
 
-            Control.findOne({ _id: req.params.id, shapeId: req.params.shapeId })
+            Text.findOne({ _id: req.params.id, pageId: req.params.pageId })
               .populate(populate)
               .select(projection)
-              .then((control) => {
-                if (!control) {
-                  res.status(404).end(`Couldn't find control with id ${req.params.id}`);
+              .then((text) => {
+                if (!text) {
+                  res.status(404).end(`Couldn't find text with id ${req.params.id}`);
                 } else {
-                  res.status(200).json(control);
+                  res.status(200).json(text);
                 }
               })
               .catch(e => res.status(500).json(e));
@@ -67,7 +67,7 @@ export const findOne = (req, res) => {
 };
 
 /**
- * Add new control
+ * Add new text
  */
 export const add = (req, res) => {
   Prototype.findOne({ _id: req.params.prototypeId })
@@ -75,13 +75,13 @@ export const add = (req, res) => {
       if (!prototype) {
         res.status(404).end(`Couldn't find prototype with id ${req.params.prototypeId}`);
       } else if (req.decodedToken._id !== String(prototype.userId)) {
-        res.status(403).end(`User with id '${req.decodedToken._id}' attempted to create control for shape with '${prototype.userId}' as owner`);
+        res.status(403).end(`User with id '${req.decodedToken._id}' attempted to create text for page with '${prototype.userId}' as owner`);
       } else {
         validator(req.body, blueprint.post.add)
           .then((validated) => {
-            const control = new Control({ shapeId: req.params.shapeId, ...validated });
+            const text = new Text({ pageId: req.params.pageId, ...validated });
 
-            control.save((err, doc) => {
+            text.save((err, doc) => {
               if (err) {
                 res.status(500).json(err);
               } else {
@@ -96,7 +96,7 @@ export const add = (req, res) => {
 };
 
 /**
- * Update one control by id
+ * Update one text by id
  */
 export const update = (req, res) => {
   Prototype.findOne({ _id: req.params.prototypeId })
@@ -104,16 +104,16 @@ export const update = (req, res) => {
       if (!prototype) {
         res.status(404).end(`Couldn't find prototype with id ${req.params.prototypeId}`);
       } else if (req.decodedToken._id !== String(prototype.userId)) {
-        res.status(403).end(`User with id '${req.decodedToken._id}' attempted to update control for shape with '${prototype.userId}' as owner`);
+        res.status(403).end(`User with id '${req.decodedToken._id}' attempted to update text for page with '${prototype.userId}' as owner`);
       } else {
-        Control.findOne({ _id: req.params.id, shapeId: req.params.shapeId })
-          .then((control) => {
-            if (!control) {
-              res.status(404).end(`Couldn't find control with id ${req.params.id}`);
+        Text.findOne({ _id: req.params.id, pageId: req.params.pageId })
+          .then((text) => {
+            if (!text) {
+              res.status(404).end(`Couldn't find text with id ${req.params.id}`);
             } else {
               validator(req.body, blueprint.patch.one)
                 .then((validated) => {
-                  Control.update({ _id: req.params.id }, { $set: validated })
+                  Text.update({ _id: req.params.id }, { $set: validated })
                     .then(() => res.status(200).json({ ...validated, _id: req.params.id }))
                     .catch(e => res.status(500).json(e));
                 })
@@ -127,7 +127,7 @@ export const update = (req, res) => {
 };
 
 /**
- * Remove one control by id
+ * Remove one text by id
  */
 export const remove = (req, res) => {
   Prototype.findOne({ _id: req.params.prototypeId })
@@ -135,16 +135,16 @@ export const remove = (req, res) => {
       if (!prototype) {
         res.status(404).end(`Couldn't find prototype with id ${req.params.prototypeId}`);
       } else if (req.decodedToken._id !== String(prototype.userId)) {
-        res.status(403).end(`User with id '${req.decodedToken._id}' attempted to delete control for shape with '${prototype.userId}' as owner`);
+        res.status(403).end(`User with id '${req.decodedToken._id}' attempted to delete text for page with '${prototype.userId}' as owner`);
       } else {
-        Control.findOne({ _id: req.params.id, shapeId: req.params.shapeId })
-          .then((control) => {
-            if (!control) {
-              res.status(404).end(`Couldn't find control with id ${req.params.id}`);
+        Text.findOne({ _id: req.params.id, pageId: req.params.pageId })
+          .then((text) => {
+            if (!text) {
+              res.status(404).end(`Couldn't find text with id ${req.params.id}`);
             } else {
-              control.remove()
+              text.remove()
                 .then(() => {
-                  res.status(200).json(control);
+                  res.status(200).json(text);
                 })
                 .catch(e => res.status(500).json(e));
             }
